First draft complete

--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
           <a class="js-scroll-trigger" href="#page-top">Home</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#programme">Programme</a>
-        </li>
-        <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#register">Register</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+          <a class="js-scroll-trigger" href="#programme">Programme</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#location">Location</a>
@@ -53,18 +50,29 @@
 
     <!-- Header -->
     <header class="masthead d-flex">
-      <div class="container text-light text-left my-auto">
-        <h1 class="mb-1 mr-5">ECR Neuroimaging Day 2018</h1>
-        <h3 class="mb-5">
+      <div class="container text-left my-auto">
+        <h1 class="mb-0 mr-5">ECR Neuroimaging Day</h1>
+        <h1 class="mb-0 mr-5">2018</h1>
+        <h4 class="mb-4">
           <em>Wednesday June 6th, 10am - 5pm</em>
         </h3>
+        <a class="btn btn-primary btn-xl mr-4 js-scroll-trigger" href="#register">Registration</a>
         <a class="btn btn-primary btn-xl mr-4 js-scroll-trigger" href="#programme">Programme</a>
-        <a class="btn btn-primary btn-xl mr-4 js-scroll-trigger" href="#register">Register</a>
         <a class="btn btn-primary btn-xl mr-4 js-scroll-trigger" href="#location">Location</a>
       </div>
       <div class="overlay"></div>
     </header>
 
+    <!-- Registration -->
+    <section class="content-section bg-primary text-white text-center" id="register">
+      <div class="container">
+        <div class="content-section-heading">
+          <h2 class="text-white mb-5">Registration</h2>
+        </div>
+        <div style="width:100%; text-align:center;"><iframe src="https://eventbrite.co.uk/tickets-external?eid=45232228814&ref=etckt" frameborder="0" height="275" width="75%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:center;" ><a class="powered-by-eb" style="color: #fff; text-decoration: none;" target="_blank" href="https://www.eventbrite.co.uk/">Powered by Eventbrite</a></div></div>
+      </div>
+    </section>
+    
     <!-- Programme -->
     <section class="content-section bg-light" id="programme">
       <div class="container text-center">
@@ -77,95 +85,9 @@
       </div>
     </section>
 
-    <!-- Registration -->
-    <section class="content-section bg-primary text-white text-center" id="register">
-      <div class="container">
-        <div class="content-section-heading">
-          <h2 class="text-white mb-2">Register</h2>
-          <!--<h2 class="mb-5">What We Offer</h2>-->
-        </div>
-        <div style="width:100%; text-align:left;"><iframe src="https://eventbrite.co.uk/tickets-external?eid=45232228814&ref=etckt" frameborder="0" height="275" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #fff; text-decoration: none;" target="_blank" href="https://www.eventbrite.co.uk/">Powered by Eventbrite</a></div></div>
-      </div>
-    </section>
-
-    <!-- Callout -->
-    <section class="callout">
-      <div class="container text-center">
-        <h2 class="mx-auto mb-5">Welcome to
-          <em>your</em>
-          next website!</h2>
-        <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
-      </div>
-    </section>
-
-    <!-- Portfolio -->
-    <section class="content-section" id="portfolio">
-      <div class="container">
-        <div class="content-section-heading text-center">
-          <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5">Recent Projects</h2>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Stationary</h2>
-                  <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Ice Cream</h2>
-                  <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Strawberries</h2>
-                  <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Workspace</h2>
-                  <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Call to Action -->
-    <section class="content-section bg-primary text-white">
-      <div class="container text-center">
-        <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-        <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-        <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
-      </div>
-    </section>
-
     <!-- Map -->
-    <section id="location" class="map">
-      <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1058.7090268951347!2d-0.09003823566316023!3d50.86729972853165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487588ca91397649%3A0x3fa8cf53189fbfa5!2sJubilee+Building!5e0!3m2!1sen!2suk!4v1523892103932;output=embed"></iframe>
+    <section id="location" class="map bg-secondary">
+      <iframe width="95%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1058.7090268951347!2d-0.09003823566316023!3d50.86729972853165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487588ca91397649%3A0x3fa8cf53189fbfa5!2sJubilee+Building!5e0!3m2!1sen!2suk!4v1523892103932;output=embed"></iframe>
       <br/>
       <small>
         <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1058.7090268951347!2d-0.09003823566316023!3d50.86729972853165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487588ca91397649%3A0x3fa8cf53189fbfa5!2sJubilee+Building!5e0!3m2!1sen!2suk!4v1523892103932;iwloc=A"></a>
@@ -192,7 +114,7 @@
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2018</p>
+        <p class="text-muted small mb-0">Copyright &copy; Trial &amp Error Productions 2018</p>
       </div>
     </footer>
 
