--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>ECR Neuroimaging Day 2018</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +68,8 @@
     <section class="content-section bg-primary text-white text-center" id="register">
       <div class="container">
         <div class="content-section-heading">
-          <h2 class="text-white mb-5">Registration</h2>
+          <h2 class="text-white mb-2">Registration</h2>
+          <h3 class="text-white mb-4">If you would like to submit an abstract for a power pitch or talk, please contact <a href="mailto:l.quadt@bsms.ac.uk" style="color:white">l.quadt@bsms.ac.uk</a> or <a href="mailto:k.themelis@bsms.ac.uk" style="color:white">k.themelis@bsms.ac.uk</a></h3> 
         </div>
         <div style="width:100%; text-align:center;"><iframe src="https://eventbrite.co.uk/tickets-external?eid=45232228814&ref=etckt" frameborder="0" height="275" width="75%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:center;" ><a class="powered-by-eb" style="color: #fff; text-decoration: none;" target="_blank" href="https://www.eventbrite.co.uk/">Powered by Eventbrite</a></div></div>
       </div>
@@ -76,12 +78,34 @@
     <!-- Programme -->
     <section class="content-section bg-light" id="programme">
       <div class="container text-center">
-        <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <h2>Draft programme to go here</h2>
-            <p class="lead mb-5">(Maybe an overview instead)!</p>
-          </div>
-        </div>
+
+            <h2>Full Programme TBA by May 23rd</h2>
+            <h4>...but here's our TODO list</h3>
+            <ul class="list">
+              <li class="list-group-item">
+              <p class="text-left">The day will give us the opportunity to:</p>
+              <ul>
+                <li class="text-left">Join together neuroimagers across departments</li>
+                <li class="text-left">Update on the exciting work being done locally by neuroimaging ECRs</li>
+                <li class="text-left">Enjoy networking over free lunch and evening drinks</li>
+                <li class="text-left">Talk with experienced career consultants</li>
+              </ul>
+              </li>
+              
+              
+              <li class="list-group-item">
+              <p class="text-left">We will have:</p>
+              <ul>
+                <li class="text-left">Power pitches (ECRs &amp Career Panellists)</li>
+                <li class="text-left">Career Panel</li>
+                <li class="text-left">Social lunch</li>
+                <li class="text-left">ECR talks</li>
+                <li class="text-left">Prizes for the best Power pitch &amp best talk</li>
+                <li class="text-left">Social event</li>
+              </li>
+              </ul>
+
+
       </div>
     </section>
 
