Margins for content

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- Registration -->
     <section class="content-section bg-primary text-white text-center" id="register">
-      <div class="container">
+      <div class="container-fluid">
         <div class="content-section-heading">
           <h2 class="text-white mb-2">Registration</h2>
           <h3 class="text-white mb-4">If you would like to submit an abstract for a power pitch or talk, please contact <a href="mailto:l.quadt@bsms.ac.uk" style="color:white">l.quadt@bsms.ac.uk</a> or <a href="mailto:k.themelis@bsms.ac.uk" style="color:white">k.themelis@bsms.ac.uk</a></h3> 
@@ -77,7 +77,7 @@
     
     <!-- Programme -->
     <section class="content-section bg-light" id="programme">
-      <div class="container text-center">
+      <div class="container-fluid text-center">
 
             <h2>Full Programme TBA by May 23rd</h2>
             <h4>...but here's our TODO list</h3>
