menu updated for abstracts

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <a class="js-scroll-trigger" href="#register">Register</a>
         </li>
         <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#abstract">Call for abstracts</a>
+        </li>
+        <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#programme">Programme</a>
         </li>
         <li class="sidebar-nav-item">
