menu updated for abstracts

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <a class="js-scroll-trigger" href="#register">Register</a>
         </li>
         <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#abstract">Call for abstracts</a>
+        </li>
+        <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#programme">Programme</a>
         </li>
         <li class="sidebar-nav-item">
@@ -82,7 +85,7 @@
       <div class="container text-justify" id="abstract">
       
       <p style="margin-bottom:1cm;"></p>
-      <h2 class="text-white mb-2">ECRs in Neuroimaging Day Abstract Submission FAQ</h2>
+      <h2 class="text-white mb-2 text-left">ECRs in Neuroimaging Day Abstract Submission FAQ</h2>
 
        <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">How do I submit an abstract?</h5></p>
       <p style="margin-top:-0.1cm;">Please send titles and abstracts (no more than 300 words for talks and no more than 200 words for power pitches) to <a href="mailto:l.quadt@bsms.ac.uk" style="color:white">l.quadt@bsms.ac.uk</a> or <a href="mailto:k.themelis@bsms.ac.uk" style="color:white">k.themelis@bsms.ac.uk</a>. Please state whether you are a postdoc or PhD student so we can spread talks evenly across slots.
