--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="content-section-heading">
           <h2 class="text-white mb-2">Registration</h2>
-          <h3 class="text-white mb-4">If you would like to submit an abstract for a power pitch or talk, please contact <a href="mailto:l.quadt@bsms.ac.uk" style="color:white">l.quadt@bsms.ac.uk</a> or <a href="mailto:k.themelis@bsms.ac.uk" style="color:white">k.themelis@bsms.ac.uk</a></h3> 
+          <h3 class="text-white mb-4">If you would like to give a power pitch or talk, please contact <a href="mailto:l.quadt@bsms.ac.uk" style="color:white">l.quadt@bsms.ac.uk</a> or <a href="mailto:k.themelis@bsms.ac.uk" style="color:white">k.themelis@bsms.ac.uk</a></h3> 
         </div>
         <div style="width:100%; text-align:center;"><iframe src="https://eventbrite.co.uk/tickets-external?eid=45232228814&ref=etckt" frameborder="0" height="275" width="90%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:center;" ><a class="powered-by-eb" style="color: #fff; text-decoration: none;" target="_blank" href="https://www.eventbrite.co.uk/">Powered by Eventbrite</a></div></div>
       </div>
@@ -87,8 +87,8 @@
       <p style="margin-bottom:1cm;"></p>
       <h2 class="text-white mb-2 text-left">ECRs in Neuroimaging Day Abstract Submission FAQ</h2>
 
-       <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">How do I submit an abstract?</h5></p>
-      <p style="margin-top:-0.1cm;">Please send titles and abstracts (no more than 300 words for talks and no more than 200 words for power pitches) to <a href="mailto:l.quadt@bsms.ac.uk" style="color:white">l.quadt@bsms.ac.uk</a> or <a href="mailto:k.themelis@bsms.ac.uk" style="color:white">k.themelis@bsms.ac.uk</a>. Please state whether you are a postdoc or PhD student so we can spread talks evenly across slots.
+       <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">How do I sign up to give a talk or powerpitch?</h5></p>
+      <p style="margin-top:-0.1cm;">Please send a title and one or two sentences describing the topic to <a href="mailto:l.quadt@bsms.ac.uk" style="color:white">l.quadt@bsms.ac.uk</a> or <a href="mailto:k.themelis@bsms.ac.uk" style="color:white">k.themelis@bsms.ac.uk</a>. Please state whether you are a postdoc or PhD student so we can spread talks evenly across slots.
       </p>
  
        <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">What is the difference between a talk and a power pitch?</h5></p>
