--- a/index.html
+++ b/index.html
@@ -158,7 +158,24 @@
       <div class="container text-center">
 
             <h2>Alternative neuroimaging-careers panel</h2>
-            <h4>Details to be announced soon</h3>
+      <div class="container text-justify">
+      
+      <p style="margin-bottom:1cm;"></p>
+
+      <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">Dr Sarah Fielding Smith</h5></p>
+      <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Research Fellow in Neuroscience (Neuroscience and Imaging), BSMS</h5></p>
+      <p style="margin-top:-0.1cm;">Sarah completed her PhD in Psychological Mechanisms of Auditory Hallucinations at Sussex in 2016, and currently works as a Research Fellow at Brighton and Sussex Medical School, on an MRC-funded project exploring phenomenological, cognitive and neurobiological markers of voice hearing experiences in Borderline Personality Disorder.  Her background is in Natural Sciences and Neuroscience, with clinical experience in primary care mental health.</p>
+ 
+      <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">Dr Matt Thakur</h5></p>
+      <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Senior Insight Research Analyst, Wellcome Trust</h5></p>
+      <p style="margin-top:-0.1cm;">Matt works at the Wellcome Trust as a Senior Insight Research Analyst.  His specialties include Horizon scanning, Analytics, Data visualisation, Strategy development, Evaluation, Pain and analgesia, Osteoarthritis, Electrophysiology and Systems neuroscience.  He completed his PhD in Neuroscience at UCL in 2011, working as part of the London Pain Consortium research labs.</p>
+       
+      <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">Dr Natalie James</h5></p>
+      <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Professional Development Consultant and Coach</h5></p>
+      <p style="margin-top:-0.1cm;">Natasha's clients include higher education professionals and academic researchers from all career stages from PhD to Professor, along with University departments and Higher Education Institutions that are keen to understand and respond to the needs of their staff and students. She holds a European Mentoring and Coaching Council accredited qualification in coaching and mentoring and is a member of the Association for Coaching. Prior to launching her coaching and consultancy business, she spent four years managing research staff development activity at the University of Sussex, before which she spent five years as a senior manager at the UK Engineering and Physical Sciences Research Council. Nastasha completed her PhD in Chemistry from the University of Bristol in 2009.</p>     
+      <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">Dr Natasha Ratcliffe</h5></p>
+      <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Research Involvement Officer, Parkinson's UK</h5></p>
+      <p style="margin-top:-0.1cm;">Natasha works at Parkinson's UK as Research Involvement Officer, coordinating the charity's Patient and Public Involvement (PPI) programme. Prior to taking up this role, she completed her PhD at the University of Nottingham, investigating multisensory integration and body representation in healthy participants and people experiencing somatic symptoms.</p>
 
 
       </div>
