--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
       <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">Dr Sarah Fielding Smith</h5></p>
       <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Research Fellow in Neuroscience (Neuroscience and Imaging), BSMS</h5></p>
-      <p style="margin-top:-0.1cm;">Sarah completed her PhD in Psychological Mechanisms of Auditory Hallucinations at Sussex in 2016, and currently works as a Research Fellow at Brighton and Sussex Medical School, on an MRC-funded project exploring phenomenological, cognitive and neurobiological markers of voice hearing experiences in Borderline Personality Disorder.  Her background is in Natural Sciences and Neuroscience, with clinical experience in primary care mental health.</p>
+      <p style="margin-top:-0.1cm;">Sarah completed her PhD at the University of Sussex in 2016, investigating psychological mechanisms of auditory hallucinations. She currently works as a Research Fellow at Brighton and Sussex Medical School, on an MRC-funded project exploring phenomenological, cognitive and neurobiological markers of voice hearing experiences in Borderline Personality Disorder.  Her background is in Natural Sciences and Neuroscience, with clinical experience in primary care mental health.</p>
  
       <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">Dr Matt Thakur</h5></p>
       <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Senior Insight Research Analyst, Wellcome Trust</h5></p>
