Dr Rae bio added

--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@
       <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Research Involvement Officer, Parkinson's UK</h5></p>
       <p style="margin-top:-0.1cm;">Natasha works at Parkinson's UK as Research Involvement Officer, coordinating the charity's Patient and Public Involvement (PPI) programme. Prior to taking up this role, she completed her PhD at the University of Nottingham, investigating multisensory integration and body representation in healthy participants and people experiencing somatic symptoms.</p>
 
+      <p style="margin-top:0.5cm;"><h5 class="text-white mb-4">Dr Charlotte Rae</h5></p>
+      <p style="margin-top:-0.5cm;"><h5 class="text-white mb-4">Research Fellow, BSMS</h5></p>
+      <p style="margin-top:-0.1cm;">Charlotte completed her PhD in cognitive neuroscience at the MRC Cognition and Brain Sciences Unit in Cambridge in 2013. Her PhD research outlined the structural and functional brain networks that support control of voluntary action. This included training in analysis of structural and effective connectivity techniques using both diffusion imaging and fMRI. She moved to the University of Sussex in 2014 as a postdoctoral Research Fellow at the Sackler Centre for Consciousness Science and the Department of Neuroscience in Brighton and Sussex Medical School.</p>
 
       </div>
     </section>
