Rollback table width

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <table>
   <tr>
     <th><strong>10:00</strong></th>
-    <th>Arrival and registration</th> 
+    <th style="min-width:200px">Arrival and registration</th> 
     <td>(outside lecture theatre 143) Coffee and snacks available</td>
   </tr>
  
