--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1 class="mb-0 mr-5">ECR Neuroimaging Day</h1>
         <h1 class="mb-0 mr-5">2018</h1>
         <h4 class="mb-4">
-          <em>Wednesday June 6th, 10am - 5pm</em>
+          <em>Wednesday June 6th, 9:30am - 4:30pm</em>
         </h4>
         <a class="btn btn-primary btn-xl mr-4 js-scroll-trigger" href="#register">Registration</a>
         <a class="btn btn-primary btn-xl mr-4 js-scroll-trigger" href="#abstract">Call for abstracts</a>
@@ -124,7 +124,7 @@
       <div class="container text-center">
 
             <h2>Programme</h2>
-            <h4>Jubilee 143 (GTS Seminar Room)</h4>
+            <h4>Jubilee 144 (GTS Lecture Theatre)</h4>
             <style>
             table {
               border-collapse: collapse;
@@ -145,72 +145,73 @@
             </style>
             <table>
   <tr>
-    <th><strong>10:00</strong></th>
+    <th><strong>09:30</strong></th>
     <th style="min-width:200px">Arrival and registration</th> 
-    <td>(outside lecture theatre 143) Coffee and snacks available</td>
+    <td>(outside seminar room 143) Coffee and snacks available</td>
   </tr>
  
   <tr>
-    <th>10:20</th>
+    <th>09:50</th>
     <th>Welcome</th>
     <th></th>
   </tr>
  
   <tr>
-    <th>10:30-10:50</th>
+    <th>10:00-10:15</th>
     <th>Session 1: Power Pitches</th>
     <th></th>
   </tr>
   <tr>
   <td></td>
-  <td>10:30</td>
+  <td>10:00</td>
   <td><strong>Dr Matt Gabel</strong> "Data-driven modelling of diffusion MRI changes in Amyotrophic Lateral Sclerosis (ALS) indicates evolution of distal prior to proximal corticospinal tract pathology"</td>
   </tr>
   <tr>
   <td></td>
-  <td>10:35</td>
+  <td>10:05</td>
   <td><strong>Ola Herman</strong> Title TBC</td>
   </tr> 
   <tr>
   <td></td>
-  <td>10:40</td>
+  <td>10:10</td>
   <td><strong>Jo Cutler</strong> Title TBC</td>
-  </tr> 
+  </tr>
+   
   <tr>
+  <th>10:15</th>
+  <th>#badstockphotosofmyjob</th>
   <td></td>
-  <td>10:45</td>
-  <td><strong>#badstockphotosofmyjob</strong></td>
   </tr>   
   
   <tr>
-    <th>10:50-11:50</th>
-    <th>Session 2: Postdoc talks</th>
+    <th>10:20-11:20</th>
+    <th>Session 2: Morning talks</th>
     <th></th>
   </tr>
   <tr>
   <td></td>
-  <td>10:50</td>
+  <td>10:20</td>
   <td><strong>Devin Clarke </strong>"Brain-region-specific effects of a high fat diet: Investigating microglial and vascular changes in awake, behaving mice"</td>
   </tr> 
   <tr>
   <td></td>
-  <td>11:10</td>
+  <td>10:40</td>
   <td><strong>Dr Konstantinos Bromis </strong>"Altered Brain Functional Connectivity in Small-Cell Lung Cancer Patients after Chemotherapy Treatment: A Resting-State fMRI Study"</td>
   </tr> 
   <tr>
   <td></td>
-  <td>11:30</td>
+  <td>11:00</td>
   <td><strong>Dr Doran Amos </strong>"Got a small one? You can get lost: Anterior thalamic volume predicts inter-subject variation in sense of direction"</td>
   </tr> 
 
   <tr>
-    <th>11:50-12:00</th>
+    <th>11:20-11:40</th>
     <th>Short break</th>
     <th></th>
   </tr>
 
   <tr>
-    <th>12:00-12:45</th>
+    <th>11:40-12:45</th>
     <td><strong>Career Panel Discussion &
     <br>Guest Talk</strong>
     <br>12:00</td>
@@ -224,18 +225,18 @@
   <tr>
   <td></td>
   <td>12:40</td>
-  <td><strong>Dr Natalie James </strong> Title TBC</td>
+  <td><strong>Dr Natalie James </strong>"An introduction into the coaching-concept"</td>
   </tr>   
   
   <tr>
     <th>12:45-13:45</th>
     <th>Lunch</th> 
-    <td>(served in room 155)</td>
+    <td>(served in room 143)</td>
   </tr>  
 
   <tr>
     <th>13:45-15:05</th>
-    <th>Session 3: PhD talks</th>
+    <th>Session 3: Afternoon talks</th>
     <td>NB Parallel Speed "Coaching" sessions taking place</td>
   </tr>
   <tr>
@@ -251,7 +252,7 @@
   <tr>
   <td></td>
   <td>14:25</td>
-  <td><strong>James Mulcahy </strong>Title TBC</td>
+  <td><strong>James Mulcahy </strong>"Aligning Dimensions of Interoceptive Experience (ADIE) to prevent anxiety in autism: A neuroimaging perspective"</td>
   </tr>
   <tr>
   <td></td>
@@ -262,7 +263,7 @@
   <tr>
     <th>15:05-15:20</th>
     <th>Tea/Coffee Break</th> 
-    <td></td>
+    <td>(served in room 143)</td>
   </tr>    
   
   <tr>
@@ -273,19 +274,18 @@
   <tr>
   <td></td>
   <td>15:20</td>
-  <td><strong>Dr Matt Thakur </strong>Title TBC</td>
+  <td><strong>Dr Matt Thakur </strong>"Careers outside academia: what you need to know"</td>
   </tr> 
   <tr>
   <td></td>
   <td>15:40</td>
-  <td><strong>Dr Natasha Ratcliffe </strong>Title TBC</td>
+  <td><strong>Dr Natasha Ratcliffe </strong>"Patient and Public involvement in Research"</td>
   </tr> 
   
   <tr>
     <th>16:00</th>
     <th>Prizegiving</th> 
-    <td>Best PhD Student talk
-    <br>Best Postdoc talk
+    <td>Best talks
     <br>Best #badstockphotosofmyjob</td>
   </tr>   
   
