--- a/index.html
+++ b/index.html
@@ -229,7 +229,14 @@
   </tr>   
   
   <tr>
-    <th>12:45-13:45</th>
+    <th>12:45-12:50</th>
+    <th>Group photo</th> 
+    <td></td>
+  </tr>  
+  
+  
+  <tr>
+    <th>12:50-13:45</th>
     <th>Lunch</th> 
     <td>(served in room 143)</td>
   </tr>  
